--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,6 @@ jobs:
           distribution: 'temurin'
           java-version: '19'
       - run: sudo apt update && sudo apt install -y gnupg
-      - run: echo $PGP_SECRET | base64 --decode | gpg --batch --import
-        env:
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -38,10 +35,7 @@ jobs:
           cd joern-cli/target/universal/stage
           ./schema-extender/test.sh
           cd -
-      - run: sbt ciReleaseTagNextVersion ciReleaseSonatype createDistribution
-        env:
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+      - run: sbt ciReleaseTagNextVersion createDistribution
       - run: sha512sum target/joern-cli.zip > target/joern-cli.zip.sha512
       - name: Export ENV vars
         run:
